<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingStart="@dimen/padding_for_linear_layout"
    android:paddingTop="@dimen/padding_for_linear_layout"
    android:paddingBottom="@dimen/padding_for_linear_layout"
    android:paddingEnd="@dimen/padding_for_linear_layout">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_for_linear_layout"
                android:gravity="center_vertical"
                android:text="@string/playlist_maker"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large">
            </TextView>

            <Button
                android:id="@+id/button_search"
                style="@style/main_menu_buttons"
                android:text="@string/button_search"
                app:icon="@drawable/search"
                tools:ignore="VisualLintButtonSize">
            </Button>

            <Button
                android:id="@+id/button_media_lib"
                style="@style/main_menu_buttons"
                android:text="@string/button_media_lib"
                app:icon="@drawable/library"
                tools:ignore="VisualLintButtonSize">
            </Button>

            <Button
                android:id="@+id/button_settings"
                style="@style/main_menu_buttons"
                android:text="@string/button_settings"
                app:icon="@drawable/settings"
                tools:ignore="VisualLintButtonSize" />
</LinearLayout>