<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp60"
    android:background="@color/yp_white_and_yp_black"
    android:gravity="center"
    android:id="@+id/util_item_track"
    android:orientation="horizontal"
    android:paddingStart="@dimen/dp12">

    <ImageView
        android:id="@+id/artwork_image_view"
        style="@style/Placeholder"
        android:layout_width="@dimen/dp44"
        android:layout_height="@dimen/dp44"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder"
        tools:src="@drawable/ic_placeholder" />

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name_text_view"
            style="@style/TrackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/z"
            tools:text="@string/placeholder_track_name"
            android:maxLines="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_name_text_view"
                style="@style/TrackTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="40"
                tools:text="@string/placeholder_artist_name" />

            <ImageView
                android:id="@+id/ic_point"
                style="@style/IcPoint"
                android:layout_width="@dimen/dp12"
                android:layout_height="@dimen/dp12"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_point"
                tools:src="@drawable/ic_point" />

            <TextView
                android:id="@+id/track_duration_text_view"
                style="@style/TrackTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_track_time" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/button_right_arrow"
        style="@style/TrackStyleCustom"
        android:layout_width="@dimen/dp24"
        android:layout_height="@dimen/dp24"
        android:src="@drawable/ic_btn_arrow_forward" />

</LinearLayout>